force-app/main/default/objects/Gateway__c/Gateway__c.object-meta.xml
<CustomObject>
    <description>Created by: DB (Rogue Cloud)
For: Stripe Integration
Function: To store API Keys for Stripe.
Populated By: Admin.</description>
    <label>Gateway</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>