force-app/main/default/objects/Gateway__c/fields/Publishable_Key__c.field-meta.xml
<CustomField>
    <fullName>Publishable_Key__c</fullName>
    <label>Publishable Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>