force-app/main/default/objects/Gateway__c/fields/Test_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Test_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Gateway</label>
    <type>Checkbox</type>
</CustomField>