force-app/main/default/objects/Gateway__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Username</label>
    <length>26</length>
    <type>Text</type>
</CustomField>